plugins {
    id 'org.jetbrains.kotlin.jvm' version '1.9.25'
    id 'org.jetbrains.kotlin.plugin.spring' version '1.9.25'
    id 'org.jetbrains.kotlin.plugin.jpa' version '1.9.25'
    id 'org.jetbrains.kotlin.plugin.allopen' version '1.9.25'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'org.jlleitschuh.gradle.ktlint' version '12.1.1'
}

allOpen {
    annotations("javax.persistence.Entity", "javax.persistence.MappedSuperclass", "javax.persistence.Embedabble")
}

group = 'ru.itmo.wisher'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'org.jetbrains.kotlin:kotlin-reflect'
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8"
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-reactor"

    implementation 'com.fasterxml.jackson.core:jackson-core'
    implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-csv"

    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.hibernate:hibernate-core:6.2.0.Final'
    implementation 'org.liquibase:liquibase-core:4.20.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
    testImplementation 'org.mockito:mockito-core:5.0.0'
    testImplementation 'org.mockito.kotlin:mockito-kotlin:4.0.0'
    testImplementation 'org.assertj:assertj-core:3.23.1'

    testImplementation 'org.testcontainers:testcontainers:1.19.8'
    testImplementation 'org.testcontainers:junit-jupiter:1.19.8'
    testImplementation 'org.testcontainers:postgresql:1.19.8'
}

kotlin {
    compilerOptions {
        freeCompilerArgs.addAll '-Xjsr305=strict'
    }
}

allOpen {
    annotation 'jakarta.persistence.Entity'
    annotation 'jakarta.persistence.MappedSuperclass'
    annotation 'jakarta.persistence.Embeddable'
}

ktlint {
    version = "1.1.0"
    android = false
    ignoreFailures = false
    verbose = true

    reporters {
        reporter 'plain'
        reporter 'checkstyle'
        reporter 'sarif'
    }

    additionalEditorconfig = [
            "ktlint_code_style"                                                    : "ktlint_official",
            "indent_size"                                                          : "4",
            "max_line_length"                                                      : "100",
            "insert_final_newline"                                                 : "true",
            "ij_kotlin_allow_trailing_comma"                                       : "true",
            "ij_kotlin_allow_trailing_comma_on_call_site"                          : "true",

            "ktlint_standard"                                                      : "disabled",
            "ktlint_standard_blank-line-before-declaration"                        : "enabled",
            "ktlint_standard_block-comment-initial-star-alignment"                 : "enabled",
            "ktlint_standard_enum-entry-name-case"                                 : "enabled",
            "ktlint_standard_filename"                                             : "enabled",
            "ktlint_standard_final-newline"                                        : "enabled",
            "ktlint_standard_if-else-bracing"                                      : "enabled",
            "ktlint_standard_import-ordering"                                      : "enabled",
            "ktlint_standard_modifier-order"                                       : "enabled",
            "ktlint_standard_no-blank-line-before-rbrace"                          : "enabled",
            "ktlint_standard_no-consecutive-blank-lines"                           : "enabled",
            "ktlint_standard_no-empty-class-body"                                  : "enabled",
            "ktlint_standard_no-line-break-before-assignment"                      : "enabled",
            "ktlint_standard_no-multi-spaces"                                      : "enabled",
            "ktlint_standard_no-semi"                                              : "enabled",
            "ktlint_standard_no-trailing-spaces"                                   : "enabled",
            "ktlint_standard_no-unused-imports"                                    : "enabled",
            "ktlint_standard_spacing-around-angle-brackets"                        : "enabled",
            "ktlint_standard_spacing-between-declarations-with-annotations"        : "enabled",
            "ktlint_standard_spacing-between-declarations-with-comments"           : "enabled",
            "ktlint_standard_colon-spacing"                                        : "enabled",
            "ktlint_standard_comma-spacing"                                        : "enabled",
            "ktlint_standard_comment-spacing"                                      : "enabled",
            "ktlint_standard_curly-spacing"                                        : "enabled",
            "ktlint_standard_dot-spacing"                                          : "enabled",
            "ktlint_standard_double-colon-spacing"                                 : "enabled",
            "ktlint_standard_function-return-type-spacing"                         : "enabled",
            "ktlint_standard_function-start-of-body-spacing"                       : "enabled",
            "ktlint_standard_function-type-reference-spacing"                      : "enabled",
            "ktlint_standard_fun-keyword-spacing"                                  : "enabled",
            "ktlint_standard_kdoc-wrapping"                                        : "enabled",
            "ktlint_standard_keyword-spacing"                                      : "enabled",
            "ktlint_standard_modifier-list-spacing"                                : "enabled",
            "ktlint_standard_nullable-type-spacing"                                : "enabled",
            "ktlint_standard_op-spacing"                                           : "enabled",
            "ktlint_standard_parameter-list-spacing"                               : "enabled",
            "ktlint_standard_paren-spacing"                                        : "enabled",
            "ktlint_standard_spacing-between-function-name-and-opening-parenthesis": "enabled",
            "ktlint_standard_try-catch-finally-spacing"                            : "enabled",
            "ktlint_standard_type-argument-list-spacing"                           : "enabled",
            "ktlint_standard_type-parameter-list-spacing"                          : "enabled",
            "ktlint_standard_unary-op-spacing"                                     : "enabled",
            "ktlint_standard_string-template"                                      : "enabled",
            "ktlint_standard_indent"                                               : "enabled",
            "ktlint_standard_multiline-expression-wrapping"                        : "enabled",
            "ktlint_standard_string-template-indent"                               : "enabled",
            "ktlint_standard_wrapping"                                             : "enabled",
            "ktlint_standard_trailing-comma-on-call-site"                          : "enabled",
            "ktlint_standard_trailing-comma-on-declaration-site"                   : "enabled",
            "ktlint_standard_unnecessary-parentheses-before-trailing-lambda"       : "enabled",
            "ktlint_standard_value-parameter-comment"                              : "enabled",
            "ktlint_standard_value-argument-comment"                               : "enabled",
            "ktlint_standard_argument-list-wrapping"                               : "enabled",
            "ktlint_standard_chain-wrapping"                                       : "enabled",
            "ktlint_standard_comment-wrapping"                                     : "enabled",
            "ktlint_standard_condition-wrapping"                                   : "enabled",
            "ktlint_standard_enum-wrapping"                                        : "enabled",
            "ktlint_standard_if-else-wrapping"                                     : "enabled",
            "ktlint_standard_parameter-list-wrapping"                              : "enabled",
            "ktlint_standard_statement-wrapping"                                   : "enabled",
    ]
}

tasks.register('integrationTest', Test) {
    useJUnitPlatform {
        includeTags 'integration'
    }
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs '-XX:+EnableDynamicAgentLoading', '-Djdk.instrument.traceUsage'
}
